--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,9 +63,9 @@ const { Content } = await profile.render();
             })
             .map((link) => (
               <div>
-                <li class="border-[#D8D4FA] border-2 rounded-full w-full text-center p-3 text-xl font-semibold flex justify-between relative group overflow-hidden">
+                <li class="border-[#D8D4FA] border-2 rounded-full w-full text-center p-3 text-xl font-semibold flex justify-between relative group">
                   <img
-                    class="w-10 h-10 absolute top-3 left-2"
+                    class="w-10 h-10 absolute top-3 left-2 transition-all duration-300 group-hover:-translate-x-2 group-hover:-translate-y-2 group-active:translate-x-0 group-active:translate-y-0"
                     src={link.data.img}
                     alt="icono de la marca"
                   />
